Update UpKeeper.yml for Azure Pipelines

--- a/UpKeeper.yml
+++ b/UpKeeper.yml
@@ -10,7 +10,7 @@ pool:
   vmImage: 'windows-latest'
 
 variables:
-  solution: '**/DH.Helpdesk.Upkeeper/DH.Helpdesk.Upkeeper.csproj'
+  solution: '**/DH.Helpdesk.sln'
   buildPlatform: 'AnyCPU'
   buildConfiguration: 'Release'
 
