--- a/UpKeeper.yml
+++ b/UpKeeper.yml
@@ -7,7 +7,8 @@ trigger:
 - Development
 
 pool:
-  vmImage: 'windows-latest'
+  vmImage: 'windows-2019'
+  #vmImage: 'windows-latest'
 
 variables:
   solution: '**/DH.Helpdesk.sln'
