--- a/UpKeeper.yml
+++ b/UpKeeper.yml
@@ -7,8 +7,7 @@ trigger:
 - Development
 
 pool:
-  vmImage: 'windows-2019'
-  #vmImage: 'windows-latest'
+  vmImage: 'windows-latest'
 
 variables:
   solution: '**/DH.Helpdesk.sln'
