--- a/UpKeeper.yml
+++ b/UpKeeper.yml
@@ -16,6 +16,8 @@ variables:
 
 steps:
 - task: NuGetToolInstaller@1
+- script: dotnet build --configuration $(buildConfiguration)
+
 
 - task: NuGetCommand@2
   inputs:
