--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/packages.config
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/packages.config
@@ -5,6 +5,8 @@
   <package id="Autofac.WebApi2" version="4.2.0" targetFramework="net472" />
   <package id="Autofac.WebApi2.Owin" version="4.0.0" targetFramework="net472" />
   <package id="AutoMapper" version="7.0.1" targetFramework="net472" />
+  <package id="Azure.Core" version="1.21.0" targetFramework="net472" />
+  <package id="Azure.Identity" version="1.5.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="log4net" version="2.0.12" targetFramework="net472" />
   <package id="Log4Net.Async" version="2.0.4" targetFramework="net472" />
@@ -17,13 +19,24 @@
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Versioning" version="2.3.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
+  <package id="Microsoft.Graph" version="4.14.0" targetFramework="net472" />
+  <package id="Microsoft.Graph.Core" version="2.0.7" targetFramework="net472" />
+  <package id="Microsoft.Identity.Client" version="4.39.0" targetFramework="net472" />
+  <package id="Microsoft.Identity.Client.Extensions.Msal" version="2.18.4" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.15.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.15.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Protocols" version="6.15.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="6.15.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.15.0" targetFramework="net472" />
   <package id="Microsoft.Net.Compilers" version="2.9.0" targetFramework="net472" developmentDependency="true" />
-  <package id="Microsoft.Owin" version="4.0.0" targetFramework="net472" />
+  <package id="Microsoft.Owin" version="4.1.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Cors" version="4.0.0" targetFramework="net472" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.0" targetFramework="net472" />
-  <package id="Microsoft.Owin.Security" version="4.0.0" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security" version="4.1.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.OAuth" version="4.0.0" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.OpenIdConnect" version="4.1.1" targetFramework="net472" />
   <package id="Microsoft.VisualStudio.SlowCheetah" version="3.1.66" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
@@ -31,6 +44,17 @@
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="Swashbuckle" version="5.6.0" targetFramework="net472" />
   <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net472" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="6.15.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Memory.Data" version="1.0.2" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.ProtectedData" version="4.5.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="6.0.0" targetFramework="net472" />
+  <package id="System.Text.Json" version="6.0.1" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net472" />
 </packages>
