--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,9 @@ obj/
 _ReSharper*/
 *.DotSettings
 [Tt]est[Rr]esult*
+dhHelpdeskNG/dhHelpdesk_NG.Web/Web.config
 dhHelpdeskNG/dhHelpdesk_NG.Web/App_Data/Uploaded Files/Reports/
+dhHelpdeskNG/dhHelpdesk_NG.Web/log4net.config
 dhHelpdeskNG/packages/*
 dhHelpdeskNG/.vs/config/applicationhost.config
 
