--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ dhHelpdeskNG/dhHelpdesk_NG.Web/Web.config
 dhHelpdeskNG/dhHelpdesk_NG.Web/App_Data/Uploaded Files/Reports/
 dhHelpdeskNG/dhHelpdesk_NG.Web/log4net.config
 dhHelpdeskNG/packages/*
+dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
 dhHelpdeskNG/.vs/config/applicationhost.config
 
 dhHelpdeskNG/dhHelpdesk_NG.Web/Logs/
