--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
@@ -59,9 +59,9 @@
   <connectionStrings>
     <add name="DSN" connectionString="Password=kgk270;Persist Security Info=True;User ID=web_user;Initial Catalog=dhHelpdesk_IKEA_BSCHR;Data Source=DHUTVSQL2;MultipleActiveResultSets=True" />
     <!--dev-->
-    <add name="HelpdeskSqlServerDbContext" connectionString="Data Source=DHDS01\SQLEXPRESS;Initial Catalog=Helpdesk-Dev;User Id=pds;Password=pds;MultipleActiveResultSets=True;Connection Lifetime=3;Max Pool Size=3;" providerName="System.Data.SqlClient" />
+    <!--<add name="HelpdeskSqlServerDbContext" connectionString="Data Source=DHDS01\SQLEXPRESS;Initial Catalog=Helpdesk-Dev;User Id=pds;Password=pds;MultipleActiveResultSets=True;Connection Lifetime=3;Max Pool Size=3;" providerName="System.Data.SqlClient" />-->
     <!--dhutvsql6-->
-    <!--<add name="HelpdeskSqlServerDbContext" connectionString="Data Source=DHUTVSQL6;Initial Catalog=Helpdesk-Dev;User Id=helpdesk-dev;Password=helpdesk-dev;MultipleActiveResultSets=True;Connection Lifetime=3;Max Pool Size=3;" providerName="System.Data.SqlClient"/>-->
+    <add name="HelpdeskSqlServerDbContext" connectionString="Data Source=DHUTVSQL6;Initial Catalog=Helpdesk-Dev;User Id=helpdesk-dev;Password=helpdesk-dev;MultipleActiveResultSets=True;Connection Lifetime=3;Max Pool Size=3;" providerName="System.Data.SqlClient"/>
     <!-- <add name="HelpdeskOleDbContext" connectionString="Provider=SQLOLEDB;Data Source=CFPSEELM-NT2008;Initial Catalog=CFSQL0029;Persist Security Info=True;User Id=dhsschr; Password=dhbschr123" providerName="System.Data.OleDb" />
     <add name="DSN_AM" connectionString="Password=Ikea!2367;Persist Security Info=True;User ID=dhamdb;Initial Catalog=CFSQL0030;Data Source=CFPSEELM-NT2008;MultipleActiveResultSets=True" />-->
     <!--<add name="DSN" connectionString="Password=kgk270;Persist Security Info=True;User ID=web_user;Initial Catalog=dhHelpdesk_IKEA_BSCHR;Data Source=DHUTVSQL2;MultipleActiveResultSets=True" />  
@@ -89,6 +89,7 @@
     <add key="DefaultEmployeeNumber" value="13106668" />
     <add key="ConfirmMsgAfterCaseRegistration" value="true" />
     <add key="CaseList" value="coworkers" />
+	<add key="SignOutUrl" value="https://sts.ikeadt.com/adfs/ls/?wa=wsignout1.0" />
     <!-- "SelfService", "LineManager" -->
     <add key="CurrentApplication" value="SelfService" />
     <!-- Chat = true-->
