#Added key in Selfservice config template	<add key="SignOutUrl" value="" />

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config.template
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config.template
@@ -48,6 +48,7 @@
     <add key="ida:ProviderSelection" value="#{AdfsProviderSection}" />
     <add key="SmtpServer" value="#{SmptServer}" />
     <add key="SmtpPort" value="#{SmptPort"}" />-->
+	  <add key="SignOutUrl" value="" />
 
     <add key="CaseList" value="manager,coworkers" />
     <add key="CurrentApplication" value="SelfService" />
