Test excluding web.config

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
@@ -44,6 +44,7 @@
     <Use64BitIISExpress />
     <TypeScriptToolsVersion>4.1</TypeScriptToolsVersion>
     <DontImportPostSharp>True</DontImportPostSharp>
+	<ExcludeFilesFromDeployment>Web.config</ExcludeFilesFromDeployment> 
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
