--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config.template
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config.template
@@ -48,7 +48,8 @@
     <add key="ida:ProviderSelection" value="#{AdfsProviderSection}" />
     <add key="SmtpServer" value="#{SmptServer}" />
     <add key="SmtpPort" value="#{SmptPort"}" />-->
-	  <add key="SignOutUrl" value="" />
+	 
+	  <add key="SignOutUrl" value="" /> <!-- If value is set, logout option will show. Eg. https://www.example.com -->
 
     <add key="CaseList" value="manager,coworkers" />
     <add key="CurrentApplication" value="SelfService" />
