#186366 - Task - Remove HTTP response headers in IIS

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Web.config.template
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Web.config.template
@@ -93,7 +93,7 @@
 	</location>
 	#{/if}
 	<system.webServer>
-    <modules runAllManagedModulesForAllRequests="false"/>
+    <modules runAllManagedModulesForAllRequests="true"/>
     <security>
       <requestFiltering allowDoubleEscaping="true">
         <!-- for iis 7 >. 50 mb in bytes -->
@@ -112,6 +112,7 @@
     <httpProtocol>
       <customHeaders>
         <add name="X-Frame-Options" value="sameorigin" />
+		  <remove name="X-Powered-By" />
       </customHeaders>
     </httpProtocol>
   </system.webServer>
