--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config.template
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config.template
@@ -151,6 +151,7 @@
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
+	  <modules runAllManagedModulesForAllRequests="true"/>
     <!--<modules runAllManagedModulesForAllRequests="true">
             <remove name="FormsAuthentication" />            
     	    This is for Single Sign 
@@ -169,6 +170,11 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" resourceType="Unspecified" requireAccess="Script" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+	  <httpProtocol>
+		  <customHeaders>
+			  <remove name="X-Powered-By" />
+		  </customHeaders>
+	  </httpProtocol>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
