--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.DhDev.config
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.DhDev.config
@@ -7,25 +7,25 @@
     In the example below, the "SetAttributes" transform will change the value of 
     "connectionString" to use "ReleaseSQLServer" only when the "Match" locator 
     finds an attribute "name" that has a value of "MyDB".
-  -->  
-  <connectionStrings>
-    <add name="HelpdeskSqlServerDbContext" 
-         connectionString="Data Source=dhutvsql2;Initial Catalog=DH_Support;User Id=sa;Password=;MultipleActiveResultSets=True;" 
-         xdt:Transform="SetAttributes" 
-         xdt:Locator="Match(name)"/>
-  </connectionStrings>
-
-
-  <appSettings >
-    <add key="log4net.Internal.Debug" value="false" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <add key="dh_filesDirectory" value="C:\DHHelpdeskUTV_Documents" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <add key="dh_selfserviceaddress" value="dhHelpdeskUTV/Selfservice/case/Index/"  xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <add key="DefaultCulture" value="sv" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <add key="SmtpServer" value="smtp.datahalland.se" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <add key="SmtpPort" value="25" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-  </appSettings>
-  
+    
+    <connectionStrings>
+      <add name="MyDB" 
+        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True" 
+        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+    </connectionStrings>
+  -->
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
+    <!--
+      In the example below, the "Replace" transform will replace the entire 
+      <customErrors> section of your web.config file.
+      Note that because there is only one customErrors section under the 
+      <system.web> node, there is no need to use the "xdt:Locator" attribute.
+      
+      <customErrors defaultRedirect="GenericError.htm"
+        mode="RemoteOnly" xdt:Transform="Replace">
+        <error statusCode="500" redirect="InternalError.htm"/>
+      </customErrors>
+    -->
   </system.web>
 </configuration>
