--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.Template_Debug.config
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.Template_Debug.config
@@ -3,22 +3,29 @@
 <!-- For more information on using web.config transformation visit https://go.microsoft.com/fwlink/?LinkId=125889 -->
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
-  <connectionStrings>
-    <add name="HelpdeskSqlServerDbContext"
-         connectionString="Data Source=#{DatabaseServer};Initial Catalog=#{DatabaseName};User Id=#{DatabaseUser};Password=#{DatabasePassword};MultipleActiveResultSets=True;Connection Lifetime=3;Max Pool Size=3;" providerName="System.Data.SqlClient"
-         xdt:Transform="SetAttributes" 
-         xdt:Locator="Match(name)"/>
-  </connectionStrings>
-  <appSettings
-    xdt:Transform="Replace">
-    <add key="log4net.Internal.Debug" value="false" />
-    <add key="dh_filesDirectory" value="#{FilesDirectory}" />
-    <add key="dh_selfserviceaddress" value="#{SelfserviceAddress}"  xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <add key="DefaultCulture" value="sv" />
-    <add key="SmtpServer" value="smtp.datahalland.se" />
-    <add key="SmtpPort" value="25" />
-  </appSettings>
+  <!--
+    In the example below, the "SetAttributes" transform will change the value of 
+    "connectionString" to use "ReleaseSQLServer" only when the "Match" locator 
+    finds an attribute "name" that has a value of "MyDB".
+    
+    <connectionStrings>
+      <add name="MyDB" 
+        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True" 
+        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+    </connectionStrings>
+  -->
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
+    <!--
+      In the example below, the "Replace" transform will replace the entire 
+      <customErrors> section of your web.config file.
+      Note that because there is only one customErrors section under the 
+      <system.web> node, there is no need to use the "xdt:Locator" attribute.
+      
+      <customErrors defaultRedirect="GenericError.htm"
+        mode="RemoteOnly" xdt:Transform="Replace">
+        <error statusCode="500" redirect="InternalError.htm"/>
+      </customErrors>
+    -->
   </system.web>
 </configuration>
