--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.config.template
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.config.template
@@ -19,9 +19,9 @@
 		<add key="SmtpServer" value="smtp.datahalland.se" />
 		<add key="SmtpPort" value="25" />
 		<add key="logRequest" value="false" />
-		<add key="ClientId" value="f263307c-2182-44c0-9c28-1b8e88c00a7b"/>
-		<add key="Tenant" value="a1f945cf-f91f-4b88-a250-a58e3dd50140"/>
-		<add key="Authority" value="https://login.microsoftonline.com/{0}/v2.0"/>
+		<add key="MicrosoftClientId" value="#{MicrosoftClientId}"/>
+		<add key="MicrosoftTenant" value="#{MicrosoftTenant}"/>
+		<add key="MicrosoftAuthority" value="#{MicrosoftAuthority}"/>
 	</appSettings>
 
 	<connectionStrings>
