--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
@@ -185,6 +185,7 @@
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
+	  <modules runAllManagedModulesForAllRequests="true" />
     <!--<modules runAllManagedModulesForAllRequests="true">
       <remove name="FormsAuthentication" />      
       <add name="WSFederationAuthenticationModule" type="System.IdentityModel.Services.WSFederationAuthenticationModule, System.IdentityModel.Services, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" preCondition="managedHandler" />
@@ -196,6 +197,11 @@
       <remove fileExtension=".woff2" />
       <mimeMap fileExtension=".woff2" mimeType="font/woff2" />
     </staticContent>
+	  <httpProtocol>
+		  <customHeaders>
+			  <remove name="X-Powered-By" />
+		  </customHeaders>
+	  </httpProtocol>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">            
