--- a/ExtendedCase/ExtendedCase.WebApi/Web.config.template
+++ b/ExtendedCase/ExtendedCase.WebApi/Web.config.template
@@ -20,7 +20,7 @@
 	<helpdeskApiSettings webApiBaseUri="#{HelpdeskApiUri}" />
 	<system.web>
 		<compilation debug="true" targetFramework="4.7.2" />
-		<httpRuntime targetFramework="4.7.2" enableVersionHeader="false"/>
+		<httpRuntime targetFramework="4.7.2" />
 		<pages>
 			<namespaces>
 				<clear />
@@ -136,13 +136,14 @@
 			<remove name="TRACEVerbHandler" />
 			<add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
 		</handlers>
-		<security>
-			<!--Removes Server header from response-->
-			<requestFiltering removeServerHeader ="true" />
-		</security>
+		<modules runAllManagedModulesForAllRequests="true">
+		</modules>
 		<httpProtocol>
 			<customHeaders>
+				<remove name="X-AspNet-Version" />
+				<remove name="X-AspNetMvc-Version" />
 				<remove name="X-Powered-By" />
+				<!-- <remove name="Server" />  this one doesn't work -->
 			</customHeaders>
 		</httpProtocol>
 	</system.webServer>
