--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.config.template
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.config.template
@@ -31,7 +31,7 @@
 
 	<system.web>
 		<compilation debug="true" targetFramework="4.7.2" />
-		<httpRuntime maxRequestLength="102400" targetFramework="4.7.2" enableVersionHeader="false" />
+		<httpRuntime maxRequestLength="102400" targetFramework="4.7.2" />
 		<authentication mode="None" />
 		<pages>
 			<namespaces>
@@ -42,7 +42,7 @@
 
 	<system.webServer>
 		<security>
-			<requestFiltering allowDoubleEscaping="true" removeServerHeader="true">
+			<requestFiltering allowDoubleEscaping="true">
 				<requestLimits maxAllowedContentLength="104857600" />
 			</requestFiltering>
 		</security>
@@ -53,12 +53,15 @@
 			<remove name="TRACEVerbHandler" />
 			<add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
 		</handlers>
-		<modules>
+		<modules runAllManagedModulesForAllRequests="true">
 			<remove name="WebDAVModule"/>
 		</modules>
 		<httpProtocol>
 			<customHeaders>
+				<remove name="X-AspNet-Version" />
+				<remove name="X-AspNetMvc-Version" />
 				<remove name="X-Powered-By" />
+				<!-- <remove name="Server" />  this one doesn't work -->
 			</customHeaders>
 		</httpProtocol>
 	</system.webServer>
