--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/package.json
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/package.json
@@ -35,7 +35,7 @@
     "@angular/pwa": "^0.802.0",
     "@angular/router": "^8.2.14",
     "@angular/service-worker": "^8.2.14",
-    "@azure/msal-angular": "^2.1.0",
+    "@azure/msal-angular": "^1.1.2",
     "@azure/msal-browser": "^2.21.0",
     "@mobiscroll/angular": "file:./src/lib/mobiscroll-package/mobiscroll-angular-4.7.3.tgz",
     "@ngx-translate/core": "^11.0.1",
@@ -43,6 +43,7 @@
     "core-js": "^3.2.1",
     "file-saver": "^2.0.2",
     "luxon": "^1.17.2",
+    "msal": "^1.4.14",
     "ng2-file-upload": "^1.3.0",
     "ng2-pdf-viewer": "^5.3.3",
     "ngx-pinch-zoom": "^2.3.4",
