--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Web.config.template
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Web.config.template
@@ -93,7 +93,8 @@
 	</location>
 	#{/if}
 	<system.webServer>
-		<modules runAllManagedModulesForAllRequests="true"/>
+		<!-- if set to true below, no static files will show server name etc in response headers, but might have affect on performance-->
+		<modules runAllManagedModulesForAllRequests="false" />
 		<security>
 			<requestFiltering allowDoubleEscaping="true">
 				<!-- for iis 7 >. 50 mb in bytes -->
