Update dh-helpdesk-web.yml for Azure Pipelines

--- a/dh-helpdesk-web.yml
+++ b/dh-helpdesk-web.yml
@@ -31,5 +31,5 @@ steps:
 - task: CopyFiles@2
   inputs:
     SourceFolder: '$(Build.SourcesDirectory)'
-    TargetFolder: '$(build.artifactStagingDirectory)\_PublishedWebsites\WebUI'
-    OverWrite: true
+    Contents: '**'
+    TargetFolder: '$(build.artifactstagingdirectory)/dhHelpdesk_NG.Web'
