Update dh-helpdesk-web.yml for Azure Pipelines

--- a/dh-helpdesk-web.yml
+++ b/dh-helpdesk-web.yml
@@ -33,3 +33,9 @@ steps:
     SourceFolder: '$(Build.SourcesDirectory)'
     Contents: '**'
     TargetFolder: '$(build.artifactstagingdirectory)/dhHelpdesk_NG.Web'
+
+- task: PublishBuildArtifacts@1
+  displayName: PublishBuildArtifacts-Web
+  inputs:
+    pathtoPublish: '$(Build.ArtifactStagingDirectory)/DH.Helpdesk.Web' 
+    artifactName: 'DH.Helpdesk.Web'
