#Jus to trigger a build

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ dhHelpdeskMobile/.vs/
 /ExtendedCase/ExtendedCase.Database/ExtendedCase.Database.dbmdl
 /ExtendedCase/ExtendedCase.Database/ExtendedCase.Database.dbmdl
 /dhHelpdeskNG/UpgradeLog2.htm
+/dhHelpdeskNG/DH.Helpdesk.WebApi/Properties/PublishProfiles/FolderProfile1.pubxml
