--- a/dh-helpdesk-web.yml
+++ b/dh-helpdesk-web.yml
@@ -53,5 +53,5 @@ steps:
 - task: PublishBuildArtifacts@1
   displayName: PublishBuildArtifacts-Web
   inputs:
-    pathtoPublish: '$(Build.ArtifactStagingDirectory)/DH.Helpdesk.Web' 
+    pathtoPublish: '$(Build.ArtifactStagingDirectory)' 
     artifactName: 'DH.Helpdesk.Web'
