--- a/dh-helpdesk-web.yml
+++ b/dh-helpdesk-web.yml
@@ -13,6 +13,7 @@ variables:
   solution: '**/DH.Helpdesk.sln'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
+  projectFolder: '**/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj'
 
 steps:
 - task: NuGetToolInstaller@1
@@ -23,8 +24,8 @@ steps:
 
 - task: VSBuild@1
   inputs:
-    solution: '**/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj'
-    msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(Build.ArtifactStagingDirectory)" /p:OutDir="$(Build.ArtifactStagingDirectory)'
+    solution: '$(projectFolder)'
+    msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=FileSystem /p:PackageAsSingleFile=false /p:SkipInvalidConfigurations=true /p:PackageLocation="$(Build.ArtifactStagingDirectory)" p:OutDir="$(build.artifactStagingDirectory)"'
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
 
