--- a/dh-helpdesk-web.yml
+++ b/dh-helpdesk-web.yml
@@ -43,7 +43,7 @@ steps:
       !**/web.config
     OverWrite: true
     CleanTargetFolder: true
-    TargetFolder: '$(Build.ArtifactStagingDirectory)'
+    TargetFolder: '$(Build.ArtifactStagingDirectory)\DH.Helpdesk.Web'
 
 # - task: CopyFiles@2
 #   inputs:
@@ -54,5 +54,5 @@ steps:
 - task: PublishBuildArtifacts@1
   displayName: PublishBuildArtifacts-Web
   inputs:
-    pathtoPublish: '$(Build.ArtifactStagingDirectory)' 
+    pathtoPublish: $(Build.ArtifactStagingDirectory)\DH.Helpdesk.Web' 
     artifactName: 'DH.Helpdesk.Web'
