--- a/dh-helpdesk-web.yml
+++ b/dh-helpdesk-web.yml
@@ -21,28 +21,27 @@ steps:
   inputs:
     restoreSolution: '$(solution)'
 
-- task: VSBuild@1
-  inputs:
-    solution: '**/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj'
-    msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=FileSystem /p:PackageAsSingleFile=false /p:SkipInvalidConfigurations=true /p:PackageLocation="$(Build.ArtifactStagingDirectory)" p:OutDir="$(build.artifactStagingDirectory)"'
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
-
-# # this code takes all the files in $(Build.ArtifactStagingDirectory) and uploads them as an artifact of your build.
-# - task: PublishBuildArtifacts@1
+# - task: VSBuild@1
 #   inputs:
-#     pathtoPublish: '$(Build.ArtifactStagingDirectory)' 
-#     artifactName: 'DH.Helpdesk.Web'
+#     solution: '**/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj'
+#     msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=FileSystem /p:PackageAsSingleFile=false /p:SkipInvalidConfigurations=true /p:PackageLocation="$(Build.ArtifactStagingDirectory)" p:OutDir="$(build.artifactStagingDirectory)"'
+#     platform: '$(buildPlatform)'
+#     configuration: '$(buildConfiguration)'
+- task: MSBuild@1
+  inputs:
+    msbuildVersion: '14.0'  
+    solution: '**/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj'
+    msbuildArguments: '/p:TargetFrameworkVersion=v4.7.2 /p:OutDir="$(build.artifactStagingDirectory)"'
 
 - task: CopyFiles@2
   inputs:
-    SourceFolder: '$(Build.ArtifactStagingDirectory)'
+    SourceFolder: '$(build.artifactStagingDirector)'
     Contents: |
       **
       !**/web.config
     OverWrite: true
     CleanTargetFolder: true
-    TargetFolder: '$(Build.ArtifactStagingDirectory)\DH.Helpdesk.Web'
+    TargetFolder: '$(build.artifactStagingDirector)\DH.Helpdesk.Web'
 
 # - task: CopyFiles@2
 #   inputs:
@@ -53,5 +52,5 @@ steps:
 - task: PublishBuildArtifacts@1
   displayName: PublishBuildArtifacts-Web
   inputs:
-    pathtoPublish: $(Build.ArtifactStagingDirectory)\DH.Helpdesk.Web' 
+    pathtoPublish: $(build.artifactStagingDirector)\DH.Helpdesk.Web' 
     artifactName: 'DH.Helpdesk.Web'
