--- a/dh-helpdesk-web.yml
+++ b/dh-helpdesk-web.yml
@@ -31,7 +31,7 @@ steps:
   inputs:
     msbuildVersion: '16.0'  
     solution: '**/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj'
-    msbuildArguments: '/p:TargetFrameworkVersion=v4.7.2 /p:OutDir="$(build.artifactStagingDirectory)" -skip:objectName=filePath,absolutePath=\web.config'
+    msbuildArguments: '/p:TargetFrameworkVersion=v4.7.2 /p:SkipInvalidConfigurations=true /p:OutDir="$(build.artifactStagingDirectory)"'
     
 
 - task: CopyFiles@2
