--- a/dh-helpdesk-web.yml
+++ b/dh-helpdesk-web.yml
@@ -43,11 +43,13 @@ steps:
 #     CleanTargetFolder: true
 #     TargetFolder: '$(build.artifactStagingDirector)\DH.Helpdesk.Web'
 
-# - task: CopyFiles@2
-#   inputs:
-#     SourceFolder: '$(Build.SourcesDirectory)'
-#     Contents: '**/dhHelpdesk_NG.Web/Properties/PublishProfiles/DH.Helpdesk.Web.Release.pubxml'
-#     TargetFolder: '$(Build.ArtifactStagingDirectory)/DH.Helpdesk.Web'
+- task: CopyFiles@2
+  inputs:
+    SourceFolder: '$(Build.SourcesDirectory)'
+    # Contents: '**/dhHelpdesk_NG.Web/Properties/PublishProfiles/DH.Helpdesk.Web.Release.pubxml'
+    Contents: |
+      **
+    TargetFolder: '$(Build.ArtifactStagingDirectory)\DH.Helpdesk.Web'
 
 - task: PublishBuildArtifacts@1
   displayName: PublishBuildArtifacts-Web
