Update dh-helpdesk-web.yml for Azure Pipelines

--- a/dh-helpdesk-web.yml
+++ b/dh-helpdesk-web.yml
@@ -54,5 +54,5 @@ steps:
 - task: PublishBuildArtifacts@1
   displayName: PublishBuildArtifacts-Web
   inputs:
-    pathtoPublish: $(build.artifactStagingDirector)\DH.Helpdesk.Web' 
+    pathtoPublish: $(Build.ArtifactStagingDirectory)\DH.Helpdesk.Web' 
     artifactName: 'DH.Helpdesk.Web'
