--- a/DH-Helpdesk-Console-Development.yml
+++ b/DH-Helpdesk-Console-Development.yml
@@ -4,7 +4,13 @@
 # https://docs.microsoft.com/azure/devops/pipelines/apps/aspnet/build-aspnet-4
 
 trigger:
-- Development
+  tags:
+    include:
+    - Release
+  branches:
+    include:
+    - Development
+
 
 pool:
   vmImage: 'windows-latest'
@@ -13,13 +19,20 @@ variables:
   solution: '**/DH.Helpdesk.sln'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
+  buildVersion: $(AssemblyInfo.AssemblyInformationalVersion)
 
 steps:
 - task: NuGetToolInstaller@1
 
+- task: AssembyInfoReader@3
+  inputs:
+    searchPattern: '**\CommonAssembly\SharedAssemblyInfo.cs'
+
 - task: NuGetCommand@2
   inputs:
     restoreSolution: '$(solution)'
+    feedsToUse: 'select'
+    vstsFeed: '1e2f294e-d4e3-4681-bb74-833f682abc75'
 
 - task: VSBuild@1
   inputs:
@@ -28,7 +41,76 @@ steps:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
 
-- task: VSTest@2
+- task: CopyFiles@2
   inputs:
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
+    SourceFolder: '$(system.defaultworkingdirectory)/dhHelpdeskNG/DH.Helpdesk.LDAP-AD/bin/$(buildConfiguration)'
+    Contents: '**'
+    TargetFolder: '$(build.artifactstagingdirectory)/DH.Helpdesk.LDAP-AD'
+
+- task: CopyFiles@2
+  inputs:
+    SourceFolder: '$(system.defaultworkingdirectory)/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket/bin/$(buildConfiguration)'
+    Contents: '**'
+    TargetFolder: '$(build.artifactstagingdirectory)/DH.Helpdesk.Mail2Ticket'
+
+- task: CopyFiles@2
+  inputs:
+    SourceFolder: '$(system.defaultworkingdirectory)/dhHelpdeskNG/DH.Helpdesk.Upkeeper/bin/$(buildConfiguration)'
+    Contents: '**'
+    TargetFolder: '$(build.artifactstagingdirectory)/DH.Helpdesk.Upkeeper'
+
+- task: CopyFiles@2
+  inputs:
+    SourceFolder: '$(system.defaultworkingdirectory)/dhHelpdeskNG/DH.Helpdesk.TaskScheduler/bin/$(buildConfiguration)'
+    Contents: '**'
+    TargetFolder: '$(build.artifactstagingdirectory)/DH.Helpdesk.TaskScheduler'
+    
+
+- task: CopyFiles@2
+  inputs:
+    SourceFolder: '$(system.defaultworkingdirectory)/dhHelpdeskNG/DH.Helpdesk.EmailEngine.WinService/bin/$(buildConfiguration)'
+    Contents: '**'
+    TargetFolder: '$(build.artifactstagingdirectory)/DH.Helpdesk.EmailEngine.WinService'
+
+- task: CopyFiles@2
+  inputs:
+    SourceFolder: '$(system.defaultworkingdirectory)/dhHelpdeskNG/DH.Helpdesk.Schedule/bin/$(buildConfiguration)'
+    Contents: '**'
+    TargetFolder: '$(build.artifactstagingdirectory)/DH.Helpdesk.Schedule'
+
+- task: PublishBuildArtifacts@1
+  displayName: PublishBuildArtifacts-LDAP-AD
+  inputs:
+    pathtoPublish: '$(Build.ArtifactStagingDirectory)/DH.Helpdesk.LDAP-AD' 
+    artifactName: 'DH.Helpdesk.LDAP-AD'
+
+- task: PublishBuildArtifacts@1
+  displayName: PublishBuildArtifacts-LDAP-AD
+  inputs:
+    pathtoPublish: '$(Build.ArtifactStagingDirectory)/DH.Helpdesk.Mail2Ticket' 
+    artifactName: 'DH.Helpdesk.Mail2Ticket'
+
+- task: PublishBuildArtifacts@1
+  displayName: PublishBuildArtifacts-Upkeeper
+  inputs:
+    pathtoPublish: '$(Build.ArtifactStagingDirectory)/DH.Helpdesk.Upkeeper' 
+    artifactName: 'DH.Helpdesk.UpKeeper'
+
+- task: PublishBuildArtifacts@1
+  displayName: PublishBuildArtifacts-TaskScheduler
+  inputs:
+    pathtoPublish: '$(Build.ArtifactStagingDirectory)/DH.Helpdesk.TaskScheduler' 
+    artifactName: 'DH.Helpdesk.TaskScheduler'
+
+- task: PublishBuildArtifacts@1
+  displayName: PublishBuildArtifacts-EmailEngine
+  inputs:
+    pathtoPublish: '$(Build.ArtifactStagingDirectory)/DH.Helpdesk.EmailEngine.WinService' 
+    artifactName: 'DH.Helpdesk.EmailEngine.WinService'
+
+- task: PublishBuildArtifacts@1
+  displayName: PublishBuildArtifacts-Schedule
+  inputs:
+    pathtoPublish: '$(Build.ArtifactStagingDirectory)/DH.Helpdesk.Schedule' 
+    artifactName: 'DH.Helpdesk.Schedule'
+
