--- a/dh-helpdesk-web.yml
+++ b/dh-helpdesk-web.yml
@@ -37,7 +37,7 @@ steps:
 - task: MSBuild@1
   inputs:
     msbuildVersion: '17.0'  
-    solution: '**/dhHelpdesk_NG.Web_SelfService/DH.Helpdesk.WebApi.csproj'
+    solution: '**/dhHelpdeskNG/DH.Helpdesk.WebApi/DH.Helpdesk.WebApi.csproj'
     msbuildArguments: '/p:TargetFrameworkVersion=v4.7.2 /p:SkipInvalidConfigurations=true /p:OutDir="$(Build.ArtifactStagingDirectory)"'
 
 # - task: CopyFiles@2
