--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -13,10 +13,30 @@ steps:
 - task: NodeTool@0
   inputs:
     versionSpec: '10.x'
-  displayName: 'Install Node.js'
+    displayName: 'Install Node.js'
 
 - script: |
+    npm i
     npm install -g @angular/cli
-    npm install
-    ng build --prod
+    npm run ng build
+    build_dev-prod
+  workingDirectory: '$(System.DefaultWorkingDirectory)/src/Web'
   displayName: 'npm install and build'
+
+- task: CopyFiles@2
+  displayName: 'Copy Files'
+  inputs:
+    SourceFolder: '$(Build.SourcesDirectory)/DH.Helpdesk.WebMobile/wwwroot/build/mobile'
+    TargetFolder: '$(Build.ArtifactStagingDirectory)'
+
+
+# - task: ArchiveFiles@2
+#   displayName: 'Archive $(Build.ArtifactStagingDirectory)'
+#   inputs:
+#     rootFolderOrFile: '$(Build.ArtifactStagingDirectory)'
+
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'Helpdesk_Mobile'
+    publishLocation: 'Container'
